[package]
name = "typex_by_logicuracy"
version = "1.0.0"
description = "Industrial Logistics OS"
edition = "2021"

[lib]
name = "typex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-opener = "2.2.5"
tauri-plugin-dialog = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
rayon = "1.5"
strsim = "0.10"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
regex = "1.5"
tokio = { version = "1", features = ["full"] }
hostname = "0.3"
